[package]
name = "riscv_debugger"
version = "0.1.1"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
edition = "2018"
description = "A powerful, open-source debugger tailored for RISC-V architectures."
license = "MIT"
repository = "https://github.com/bensatlantik/debugger"
readme = "README.md"

[dependencies]
thiserror = "1.0"
